--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "functions": {
-    "api/*.php": {
-      "runtime": "vercel-php@0.6.0"
-    }
-  }
+  "cleanUrls": true,
+  "trailingSlash": false
+  
 }
