--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "cleanUrls": true,
-  "trailingSlash": false
+  "trailingSlash": false,
+  "functions": {
+    "api/test.php": {
+      "runtime": "vercel-php@8.2.4"
+    }
+  }
   
 }
