--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,9 @@
     "api/test.php": {
       "runtime": "vercel-php@8.2.4"
     }
-  }
+  },
+  "routes": [
+    { "src": "/(.*)",  "dest": "/api/index.php" }
+  ]
   
 }
